--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
         "sequelize": "^6.37.1",
         "sequelize-cli": "^6.6.1",
         "uuid": "^11.1.0",
+        "express-session": "^1.18.0",
+        "csurf": "^1.11.0",
         "@aws-sdk/client-ses": "^3.0.0",
         "@aws-sdk/client-sns": "^3.0.0"
     },
